build the agent node and Graph state

--- a/03-LangGraph-Introduction/Assignments/assignment-04-Simple-Workstator/experiment-notebook.ipynb
+++ b/03-LangGraph-Introduction/Assignments/assignment-04-Simple-Workstator/experiment-notebook.ipynb
@@ -577,32 +577,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "id": "e0576b4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SelectPath(path='LLM_CALL', reason='The user is asking a conceptual question about the necessity of learning Agentic AI, which an LLM can potentially answer by providing information on its significance.')"
+       "('LLM_CALL',\n",
+       " 'The user query seeks to understand the importance or relevance of learning Agentic AI, which can be addressed by providing a solid and correct answer on its significance and implications.')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_chain.invoke(\"Why i need to learn Agentic AI?\")"
+    "response = test_chain.invoke(\"Why i need to learn Agentic AI?\")\n",
+    "response.path, response.reason"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ea3a69f",
+   "metadata": {},
+   "source": [
+    "## **Internet Search Pipeline Setup**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "7c0b6c17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'query': 'Capital of bangladesh',\n",
+       " 'follow_up_questions': None,\n",
+       " 'answer': None,\n",
+       " 'images': [],\n",
+       " 'results': [{'title': 'Dhaka - Simple English Wikipedia, the free encyclopedia',\n",
+       "   'url': 'https://simple.wikipedia.org/wiki/Dhaka',\n",
+       "   'content': 'Dhaka is the capital and largest city of Bangladesh. Dhaka is Bangladesh’s most populous city and is one of the largest metropolises in South Asia. Dhaka College\") was started in 1841, making it the oldest institution for higher education in the city. Many Muslim families send their children to attend part-time courses or even to pursue full-time religious education alongside other subjects, which is imparted in Bengali and Arabic in schools, colleges and madrasas.Dhaka College is the oldest institution for higher education in the city and among the earliest established in British India, founded in 1841. Since its establishment as the capital city, the population, area, and social and economic diversity of Dhaka have grown tremendously.',\n",
+       "   'score': 0.8449346,\n",
+       "   'raw_content': None},\n",
+       "  {'title': 'Dhaka - Wikipedia',\n",
+       "   'url': 'https://en.wikipedia.org/wiki/Dhaka',\n",
+       "   'content': '| [1] | | Region | Southern Asia | | Notability | The Representative List of the \"Intangible Cultural Heritage of Humanity\" category | | | | | Dhaka (/ˈ d ɑː k ə/DAH-kə or /ˈ d æ k ə/DAK-ə; Bengali: ঢাকা, romanized:Ḍhākā, pronounced[ˈɖʱaka]ⓘ), formerly known asDacca,[20] is the capital and largest city of Bangladesh. It is one of the largest[a] and most densely populated cities[b] in the world with a density of about 34,000 people per square kilometer within a total area of approximately 300 square kilometers. [25][26] Dhaka is an important cultural, economic, and scientific hub of Eastern South Asia, as well as a major Muslim-majority city. Dhaka is also the largest Bengali-speaking city in the world.',\n",
+       "   'score': 0.8021998,\n",
+       "   'raw_content': None},\n",
+       "  {'title': 'Bangladesh | History, Capital, Map, Flag, Population, Pronunciation ...',\n",
+       "   'url': 'https://www.britannica.com/place/Bangladesh',\n",
+       "   'content': 'Bangladesh, country of South Asia, located in the delta of the Padma (Ganges [Ganga]) and Jamuna (Brahmaputra) rivers in the northeastern part of the Indian subcontinent. In the northeast and southeast—in the Sylhet and Chittagong Hills areas, respectively—the alluvial plains give place to ridges, running mainly north-south, that form part of the mountains that separate Bangladesh from Myanmar and India. In east-central Bangladesh the Brahmaputra River in its old course (the Old Brahmaputra River) built up the flood basin of the Meghna River, the region that includes the low and fertile Meghna-Sitalakhya Doab (the land area between those rivers). Lying to the south of the Feni River in southeastern Bangladesh is the Chittagong region, which has many hills, hillocks, valleys, and forests and is quite different in aspect from other parts of the country.',\n",
+       "   'score': 0.53065056,\n",
+       "   'raw_content': None}],\n",
+       " 'response_time': 1.56}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.environ[\"TAVILY_API_KEY\"] = os.getenv(\"TAVILY_API_KEY\")\n",
+    "\n",
+    "tavily_search = TavilySearch(\n",
+    "    max_results=3,\n",
+    "    topic=\"general\"\n",
+    ")\n",
+    "\n",
+    "tavily_search.invoke(\"Capital of bangladesh\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae048dbd",
+   "metadata": {},
+   "source": [
+    "### *Create Agent State*"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c0b6c17",
+   "id": "98e9c62c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from typing import TypedDict, Sequence\n",
+    "from langchain_core.messages import BaseMessage\n",
+    "import operator\n",
+    "\n",
+    "class State(TypedDict):\n",
+    "    \"\"\"This is is my graph state where store all conversations.\"\"\"\n",
+    "    messages: Annotated[Sequence[BaseMessage], operator.add]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4a16355",
+   "metadata": {},
+   "source": [
+    "## **Start to build the Graph Node**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "739d1367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Supervisor node\n",
+    "def supervisor(state: State):\n",
+    "    \"\"\"This node is responsible for to select the correct path based on the user query.\"\"\"\n",
+    "    question = state['messages'][-1]\n",
+    "    print(question)\n",
+    "    chain = path_prompt | llm | parser\n",
+    "    response = chain.invoke(question)\n",
+    "    print(response.path, response.reason)\n",
+    "    \n",
+    "    return {\n",
+    "        \"messages\": [response.path]\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "6b93c7b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is key and value vector?\n",
+      "RAG_CALL The user query is related to concepts (key and value vectors) from the Transformer paper 'Attention Is All You Need'.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'messages': ['RAG_CALL']}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state={'messages': [\"What is key and value vector?\"]}\n",
+    "supervisor(state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8a31de9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def router(state: State):\n",
+    "    print(\"--Router--\")\n",
+    "    last_message = state[\"messages\"][-1]\n",
+    "    print(last_message)\n",
+    "    \n",
+    "    if last_message == \"RAG_CALL\":\n",
+    "        return \"RAG\"\n",
+    "    elif last_message == \"LLM_CALL\":\n",
+    "        return \"LLM\"\n",
+    "    else:\n",
+    "        return \"INTERNET_SEARCH\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "642d318f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.output_parsers import StrOutputParser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b11f259f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def llm_call(state: State):\n",
+    "    question = state['messages'][0]\n",
+    "    prompt = PromptTemplate(\n",
+    "        template=\"\"\"\n",
+    "        You are a helpful ai assistant. Answer the question based on you capability. if you think you do not know about the question do not give the answer just simply say i do not know the proper answer. Though do not give any hypothetical answer or hallucination response or do not predict the answer. If you are confident enough then provide the answer properly.\\n\n",
+    "        the user query is: {question}\n",
+    "        \"\"\",\n",
+    "        input_variables=[\"question\"]\n",
+    "    )\n",
+    "    chain = prompt | llm | StrOutputParser()\n",
+    "    response = chain.invoke(\n",
+    "        {\n",
+    "            \"question\": question\n",
+    "        }\n",
+    "    )\n",
+    "    return {\n",
+    "        \"messages\": response\n",
+    "    }\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "42f4f4a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def internet_search(state: State):\n",
+    "    question = state['messages'][0]\n",
+    "    web_search_content = tavily_search(question)\n",
+    "    prompt = PromptTemplate(\n",
+    "        template=\"\"\"\n",
+    "        You are a helpful ai assistant who can give answer of the user query based on the web search content. First read the user query and check the web_search_content. If you think web content is not enough for to give the answer of the user query then simply say. No have enough context to give the answer. And below the user query and web_search_content.\\n\\n\n",
+    "        the user query is: {question}\\n\\n\n",
+    "        the web_search_content: {web_search_content}\\n\n",
+    "        \"\"\",\n",
+    "        input_variables=[\"question\", \"web_search_content\"]\n",
+    "    )\n",
+    "    chain = prompt | llm | StrOutputParser()\n",
+    "    response = chain.invoke(\n",
+    "        {\n",
+    "            \"question\": question,\n",
+    "            \"web_search_content\": web_search_content\n",
+    "        }\n",
+    "    )\n",
+    "    return {\n",
+    "        \"messages\": response\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5aca5322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rag_call(state: State):\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
