--- a/02-LangChain-Basics/Assignment-01-RAG/experiment_astra_db.ipynb
+++ b/02-LangChain-Basics/Assignment-01-RAG/experiment_astra_db.ipynb
@@ -308,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ailb",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
