--- a/03-LangGraph-Introduction/3.1-Langgraph-StateGraph/introduction-to-langraph.ipynb
+++ b/03-LangGraph-Introduction/3.1-Langgraph-StateGraph/introduction-to-langraph.ipynb
@@ -9,11 +9,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99f8107f",
+   "cell_type": "markdown",
+   "id": "1c68857a",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Checkout This repo: [LangGraph Introduction and GraphState](https://github.com/MDalamin5/Agentic-Ai-Journey-with-HuggingFace-and-LangChain-Academy-Course/tree/main/LangGraph-Agent-Course)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31ceb3cf",
+   "metadata": {},
    "source": []
   }
  ],
